--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "knex": "^0.20.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.0.2",
+    "nodemon": "^2.0.2",
     "objection": "^2.0.7"
   }
 }
