--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.0.2",
