--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.0.2",
     "nodemon": "^2.0.2",
-    "objection": "^2.0.7"
+    "objection": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
