--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.4",
+    "lodash": "^4.17.15",
     "morgan": "~1.9.1",
     "mysql2": "^2.0.2",
     "nodemon": "^2.0.2",
