--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "knex": "^0.20.4",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nodemon": "^2.0.2",
     "objection": "^2.0.7",
