--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
+    "jsonwebtoken": "^8.5.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-awesome": "^4.0.2",
     "vue-cookies": "^1.6.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
